Change extention of handlebars

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,9 +24,8 @@
       </nav>
     </aside>
 
-    <!-- Nội dung chính -->
     <main class="main-content">
-      {{{body}}} <!-- Nội dung từ các trang con sẽ được chèn vào đây -->
+      {{{body}}}
     </main>
   </div>
 
