--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,13 +1,19 @@
-<h2>Inbox</h2>
-<ul class="email-list">
-  <li class="email-item">
-    <p><strong>From:</strong> User B</p>
-    <p><strong>Subject:</strong> Project Update</p>
-    <p><strong>Date:</strong> 2024-10-29</p>
-  </li>
-  <li class="email-item">
-    <p><strong>From:</strong> User C</p>
-    <p><strong>Subject:</strong> Meeting Schedule</p>
-    <p><strong>Date:</strong> 2024-10-28</p>
-  </li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/resources/img/" type="image/x-icon" />
+    <link rel="stylesheet" href="/resources/css/signin.css">
+
+    <script defer src="app.js"></script>
+    <title>Coming Soon</title>
+    <style>/* FONT FACE RULE */
+
+</style>
+  </head>
+  <body>
+    
+  </body>
+</html>
