--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>hehe</title>
-<link rel="stylesheet" href="/resources/css/style.css">
+  <link rel="stylesheet" href="/resources/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/resources/css/style.css">
+  {{!-- <link rel="stylesheet" type="text/css" href="http://localhost:8000/resources/css/style.css"> --}}
 
 </head>
 <body>
   <div class="app-container">
     <!-- Sidebar điều hướng -->
-    <aside class="sidebar">
+    {{!-- <aside class="sidebar">
       <h2>My Email System</h2>
       <nav>
         <ul>
@@ -22,15 +22,11 @@
           <li><a href="" class="signout-link">Sign Out</a></li>
         </ul>
       </nav>
-    </aside>
+    </aside> --}}
 
     <main class="main-content">
       {{{body}}}
     </main>
   </div>
-
-  <footer class="footer">
-    <p>&copy; 2024 My Email System. All rights reserved.</p>
-  </footer>
 </body>
 </html>
