--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,32 +1,20 @@
+<!-- views/layouts/main.hbs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>hehe</title>
-  <link rel="stylesheet" href="/resources/css/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-  {{!-- <link rel="stylesheet" type="text/css" href="http://localhost:8000/resources/css/style.css"> --}}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
 
 </head>
 <body>
-  <div class="app-container">
-    <!-- Sidebar điều hướng -->
-    {{!-- <aside class="sidebar">
-      <h2>My Email System</h2>
-      <nav>
-        <ul>
-          <li><a href="/views/inbox.handlebars">Inbox</a></li>
-          <li><a href="/views/outbox.handlebars">Outbox</a></li>
-          <li><a href="/views/compose.handlebars">Compose</a></li>
-          <li><a href="" class="signout-link">Sign Out</a></li>
-        </ul>
-      </nav>
-    </aside> --}}
+        {{> header}}
+        <div class="container">
+            {{{body}}}
+        </div>
+        {{> footer}}
 
-    <main class="main-content">
-      {{{body}}}
-    </main>
-  </div>
 </body>
 </html>
