--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,6 +7,7 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/reset.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 
 </head>
 <body>
