--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -106,9 +106,9 @@
         </div>
         <div>
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Mật khẩu" required>
+            <input type="password" id="password" name="password" placeholder="password" required>
         </div>
         <button type="submit">Log In</button>
     </form>
-    <a href="/signup">Don't have an account? Sign up</a>
+    <span href="/signup">Don't have an account? <a href="/signup" style="text-decoration: underline; color:blue" >Sign up</a></spans>
 </div>
