--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -19,7 +19,7 @@
         }
 
         .main-header:hover {
-            background-color: #25253C; /* Hiệu ứng hover */
+            background-color: #25253C; 
         }
 
         .main-header .logo a {
@@ -56,7 +56,7 @@
                 <a href="/logout" class="btn">Log Out</a> 
             {{else}}
                 <a href="/" class="btn">Sign In</a>
-                <a href="/signup" class="btn">Sign Up</a> <!-- Nút Sign In và Sign Up -->
+                <a href="/signup" class="btn">Sign Up</a> 
             {{/if}}
         </div>
     </header>
